# ComfyUI ARC Save — packaging metadata for Comfy Registry + ComfyUI Manager.
#
# This file is the canonical metadata source. Both surfaces consume it:
#   - Comfy Registry (registry.comfy.org) reads `[project]` and
#     `[tool.comfy]` at submission and on every published version.
#   - ComfyUI Manager's custom-node-list.json entry (B2c) references
#     this repo + this file as the authoritative spec.
#
# PublisherId is the operator's Comfy Registry publisher handle,
# registered at https://registry.comfy.org. Value: "arcvelvet".

[project]
name = "comfyui-arc-save"
version = "1.0.1"
description = "Sign-on-arrival save node for ArcVelvetOS. POSTs the encoded image to the ArcVelvet arcIngest API and writes the C2PA-signed copy returned by the server. The unsigned bytes never touch disk. Prompt moderation runs server-side: prompts are scanned in-flight for minor-safety violations and discarded on pass; plaintext prompts never enter the public C2PA manifest unless you opt in."
authors = [
  { name = "ArcVelvet Studios LLC", email = "support@arcvelvet.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Security :: Cryptography",
]
keywords = [
  "comfyui",
  "comfyui-custom-node",
  "c2pa",
  "content-credentials",
  "provenance",
  "sign-on-arrival",
  "arcvelvet",
]
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "requests>=2.31",
]

[project.urls]
Homepage      = "https://arcvelvet.com"
Repository    = "https://github.com/arcvelvetOS/comfyui-arc-save"
Documentation = "https://arcvelvet.com/docs/comfyui-arc-save"
Issues        = "https://github.com/arcvelvetOS/comfyui-arc-save/issues"

# Comfy Registry-specific block. Schema reference:
#   https://docs.comfy.org/registry/specifications
# The PublisherId is namespaced under the operator's registry account
# and is independent of the GitHub org name.
[tool.comfy]
PublisherId  = "arcvelvet"
DisplayName  = "ARC Save (sign on arrival)"
Icon         = "https://arcvelvet.com/assets/Provenance-seal.png"
includes     = ["nodes/", "__init__.py", "README.md", "LICENSE", "requirements.txt"]
